--- a/aboutus.html
+++ b/aboutus.html
@@ -28,6 +28,9 @@
     <header class="jumbotron jumbotron-fluid">
       <div class="container">
         <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <a href="index.html"><img src="img/logo.png" class="fluid">
+          </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
@@ -37,6 +40,7 @@
     </header>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+      <a class="nav-brand" href="index.html"><img src="img/logo.png" height="30" width="30"> </a>
         <button
           class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="nucampNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -44,8 +48,9 @@
         <div class="collapse navbar-collapse" id="nucampNavbar">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
-            <li class="nav-item active"></a class="nav-link" href="#"> <i class="fa fa-info fa-lg"></i> About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>             <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card"></i> Contact</a></li>
+            <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+            <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card"></i> Contact</a></li>
           </ul>
         </div>
       </div>
@@ -187,8 +192,8 @@
           <div class="col-4 col-sm-2 offset-1">
             <h5>Links</h5>
             <ul class="list-unstyled">
-              <li><a href="index.html">Home</a></li> 
-              <li><a href="#">About</a></li>
+              <li><a href="#">Home</a></li>
+              <li><a href="aboutus.html">About</a></li>
               <li><a href="#">Sites</a></li>
               <li><a href="contactus.html">Contact</a></li>
             </ul>
@@ -196,13 +201,17 @@
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
             <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-        <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-        <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-        <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-      </div>
-      <div class="col-sm-4 text-center">
-       <a role="button" class="btn btn-link" href="tel:+12065551234"> <i class="fa fa-phone fa-lg text-primary"></i>1-206-555-1234 </a> <br />
-       <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i class="fa fa-envelope fa-lg text-primary"></i>campsites@nucamp.co </a>
+            <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+            <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+          </div>
+          <div class="col-sm-4 text-center">
+            <a role="button" class="btn btn-link" href="tel:+12065551234">
+              <i class="fa fa-phone fa-lg text-primary"></i>1-206-555-1234
+            </a>
+            <br /><a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co">
+              <i class="fa fa-envelope fa-lg text-primary"></i>campsites@nucamp.co
+            </a>
           </div>
         </div>
       </div>
