--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="modal-content">
         <div class="modal-header bg-info text-white">
           <h3 class="modal-title">Reserve a Campsite</h3>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button id="reserveButton" type="button" class="close" data-dismiss="modal">&times;</button> 
         </div>
         <div class="modal-body">
           <div class="container-fluid">
@@ -107,7 +107,7 @@
           </li>
         </ul>
         <span class="navbar-text ml-auto">
-          <a role="button" data-toggle="modal" data-target="#loginModal">
+          <a id="loginButton" role="button"> <!--data-toggle="modal" data-target="#loginModal"-->
             <i class="fa fa-sign-in"></i> Login
           </a>
         </span>
