--- a/contactus.html
+++ b/contactus.html
@@ -42,7 +42,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i>Home </a></li>
                     <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>About </a></li> 
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sites.html"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i> Contact</a>
                     </li>
                 </ul>
@@ -138,7 +138,7 @@
             <ul class="list-unstyled">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
-                <li><a href="#">Sites</a></li>
+                <li><a href="sites.html">Sites</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
