--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <ul class="navbar-nav">
           <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
           <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+          <li class="nav-item"><a class="nav-link" href="sites.html"><i class="fa fa-list fa-lg"></i> Sites</a></li>
           <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card"></i> Contact</a>
           </li>
         </ul>
@@ -265,7 +265,7 @@
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
             <li><a href="aboutus.html">About</a></li>
-            <li><a href="#">Sites</a></li>
+            <li><a href="sites.html">Sites</a></li>
             <li><a href="contactus.html">Contact</a></li>
           </ul>
         </div>
