--- a/aboutus.html
+++ b/aboutus.html
@@ -5,22 +5,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <!-- endbuild -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
     
 
     <title>NuCamp: A Better Way To Camp</title>
   </head>
 
   <body>
-    <header class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid mb-0">
       <div class="container">
         <div class="row">
           <div class="col-4 col-sm-3 col-md-2 align-self-center">
@@ -231,11 +228,11 @@
           </div>
           <div class="col-6 col-sm-5 text-center">
             <h5>Social</h5>
-            <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-            <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-          </div>
+            <a href="http://instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a href="http://facebook.com/"><i class="fab fa-facebook"></i></a>
+            <a href="http://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+            <a href="http://youtube.com/"><i class="fab fa-youtube"></i></a>
+        </div>
           <div class="col-sm-4 text-center">
             <a role="button" class="btn btn-link" href="tel:+12065551234">
               <i class="fa fa-phone fa-lg text-primary"></i>1-206-555-1234
@@ -248,13 +245,10 @@
       </div>
     </footer>
     <!-- build:js js/main.js -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <!-- endbuild -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
   </body>
 </html>
