--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- build:css css/main.css -->
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+
   <link rel="stylesheet" href="css/styles.css" />
   <!-- endbuild -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"> -->
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
+
   <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
-  <header class="jumbotron jumbotron-fluid">
+  <header class="jumbotron jumbotron-fluid mb-0">
     <div class="container">
       <div class="row">
         <div class="col-4 col-sm-3 col-md-2 align-self-center">
@@ -39,13 +37,37 @@
     </div>
   </header>
 
+  <!-- NavBar -->
+  <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+    <div class="container">
+      <a class="nav-brand" href=""><img src="img/logo.png" height="30" width="30" /> </a>
+      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="nucampNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+          <li class="nav-item"><a class="nav-link" href="sites.html"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+          <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card"></i> Contact</a>
+          </li>
+        </ul>
+        <span class="navbar-text ml-auto">
+          <a id="loginButton" role="button" data-toggle="modal" data-target="#loginModal">
+            <i class="fa fa-sign-in"></i> Login
+          </a>
+        </span>
+      </div>
+    </div>
+  </nav>
+
   <!-- Reserve Modal -->
   <div id="reserveModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header bg-info text-white">
           <h3 class="modal-title">Reserve a Campsite</h3>
-          <button id="reserveButton" type="button" class="close" data-dismiss="modal">&times;</button> 
+          <button id="reserveButton" type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
@@ -81,8 +103,8 @@
                   </label>
                 </div>
               </div>
-                <div class="form-row">
-                  <div class="col">
+              <div class="form-row">
+                <div class="col">
                   <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
                   <button type="submit" class="btn btn-primary btn-sm mr-1">Search</button>
                 </div>
@@ -91,31 +113,8 @@
           </div>
         </div>
       </div>
-      </div>
     </div>
-  <!-- NavBar -->
-  <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-    <div class="container">
-      <a class="nav-brand" href=""><img src="img/logo.png" height="30" width="30" /> </a>
-      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="nucampNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
-          <li class="nav-item"><a class="nav-link" href="sites.html"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-          <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card"></i> Contact</a>
-          </li>
-        </ul>
-        <span class="navbar-text ml-auto">
-          <a id="loginButton" role="button"> <!--data-toggle="modal" data-target="#loginModal"-->
-            <i class="fa fa-sign-in"></i> Login
-          </a>
-        </span>
-      </div>
-    </div>
-  </nav>
+  </div>
 
   <!-- Login Modal -->
   <div id="loginModal" class="modal fade" role="dialog">
@@ -123,7 +122,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h3 class="modal-title">Login</h3>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button id="loginButton" type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
@@ -169,7 +168,8 @@
               <img class="d-block w-100" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail Campground" />
               <div class="carousel-caption">
                 <h3>Breadcrumb Trial Campground</h3>
-                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.
+                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only
+                  campground.
                 </p>
               </div>
             </div>
@@ -177,7 +177,8 @@
               <img class="d-block w-100" src="img/react-lake-thumb.jpg" alt="React Lake Campground" />
               <div class="carousel-caption">
                 <h3>React Lake Campground</h3>
-                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores
+                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the
+                  shores
                   of
                   the pristine React Lake is a favorite
                   for fly fishers.</p>
@@ -187,7 +188,8 @@
               <img class="d-block w-100" src="img/chrome-river-thumb.jpg" alt="Chrome River" />
               <div class="carousel-caption">
                 <h3>Chrome River Campground</h3>
-                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at
+                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth
+                  firs at
                   this enchanting spot by the Chrome River</p>
               </div>
             </div>
@@ -243,21 +245,21 @@
       <div class="col-sm-4 order-sm-last col-md-3">
         <h2 class="text-sm-right">Our Community Partners</h2>
       </div>
-    <div class="row">
-      <div class="col">
-        <div class="media">
-          <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
-          <div class="media-body align-self-center">
-            <h3>Bootstrap Outfitters</h3>
-            <p class="d-none d-sm-block">
-              Bootstrap Outfitters supplies you with gear you need at prices you can't beat.
-            </p>
+      <div class="row">
+        <div class="col">
+          <div class="media">
+            <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
+            <div class="media-body align-self-center">
+              <h3>Bootstrap Outfitters</h3>
+              <p class="d-none d-sm-block">
+                Bootstrap Outfitters supplies you with gear you need at prices you can't beat.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
   <footer class="site-footer">
     <div class="container">
@@ -273,10 +275,10 @@
         </div>
         <div class="col-6 col-sm-5 text-center">
           <h5>Social</h5>
-          <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-          <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-          <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+          <a href="http://instagram.com/"><i class="fab fa-instagram"></i></a>
+          <a href="http://facebook.com/"><i class="fab fa-facebook"></i></a>
+          <a href="http://twitter.com/"><i class="fab fa-twitter-square"></i></a>
+          <a href="http://youtube.com/"><i class="fab fa-youtube"></i></a>
         </div>
         <div class="col-sm-4 text-center">
           <a role="button" class="btn btn-link" href="tel:+12065551234">
@@ -290,20 +292,19 @@
     </div>
   </footer>
   <!-- build:js js/main.js -->
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
   <script src="js/scripts.js"></script>
   <!-- endbuild -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
-  <!-- <script>
-      $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-      })
-    </script> -->
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script> -->
+  <script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+  </script>
 
 </body>
 
